--- a/public/css/app.css
+++ b/public/css/app.css
@@ -365,6 +365,24 @@ body {
   height: 100%;
   margin: 0;
   position: relative;
+  display: flex;
+  flex-direction: column;
+}
+body main {
+  width: 100%;
+  flex-grow: 1;
+}
+body main .export-db {
+  position: absolute;
+  bottom: 90px;
+  right: 20px;
+  border: 3px solid #bfbfbf;
+  border-radius: 50%;
+  line-height: 100px;
+  width: 100px;
+  padding: 20px;
+  text-transform: uppercase;
+  font-weight: 900;
 }
 body p {
   margin-top: 0;
@@ -378,24 +396,270 @@ body .container {
   margin-left: auto;
 }
 @media (min-width: 576px) {
-  .footer__container {
+  body .container {
     max-width: 540px;
   }
 }
 @media (min-width: 768px) {
-  .footer__container {
+  body .container {
     max-width: 720px;
   }
 }
 @media (min-width: 992px) {
-  .footer__container {
+  body .container {
     max-width: 960px;
   }
 }
 @media (min-width: 1200px) {
-  .footer__container {
+  body .container {
     max-width: 1140px;
   }
+}
+body input:not([type=file]), body textarea {
+  -webkit-appearance: none;
+  background-color: #fafbfc;
+  border: none;
+  border-radius: 3px;
+  box-shadow: inset 0 0 0 2px #dfe1e6;
+  box-sizing: border-box;
+  display: block;
+  line-height: 20px;
+  margin-bottom: 12px;
+  outline: none;
+  padding: 8px 12px;
+  transition-duration: 85ms;
+  transition-property: background-color, border-color, box-shadow;
+  transition-timing-function: ease;
+}
+body textarea {
+  resize: vertical;
+  width: 100%;
+}
+body .alert {
+  position: relative;
+  padding: 0.75rem 1.25rem;
+  margin-bottom: 1rem;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+}
+body .alert.alert-danger {
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+}
+body .alert.alert-success {
+  color: #155724;
+  background-color: #d4edda;
+  border-color: #c3e6cb;
+}
+body .board {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  height: 100%;
+  position: relative;
+}
+body .board .columns-wrapper {
+  bottom: 0;
+  left: 15px;
+  margin-bottom: 8px;
+  overflow-x: auto;
+  overflow-y: hidden;
+  padding-bottom: 8px;
+  position: absolute;
+  right: 15px;
+  top: 30px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+   -ms-user-select: none;
+       user-select: none;
+  white-space: nowrap;
+}
+body .board .columns-wrapper .column {
+  box-sizing: border-box;
+  display: inline-block;
+  height: 100%;
+  margin: 0 4px;
+  vertical-align: top;
+  white-space: nowrap;
+  width: 272px;
+}
+body .board .columns-wrapper .column:first-child {
+  margin-left: 0px;
+}
+body .board .columns-wrapper .column.add-column {
+  background-color: #ebecf0;
+  border-radius: 3px;
+  height: auto;
+  padding: 4px;
+  transition: background 85ms ease-in, opacity 40ms ease-in, border-color 85ms ease-in;
+}
+body .board .columns-wrapper .column.add-column.is-idle {
+  cursor: pointer;
+}
+body .board .columns-wrapper .column.add-column.is-idle .placeholder {
+  display: block;
+}
+body .board .columns-wrapper .column.add-column .placeholder {
+  color: #fff;
+  display: none;
+  padding: 6px 8px;
+  transition: color 85ms ease-in;
+}
+body .board .columns-wrapper .column.add-column .column-title-input {
+  background-color: #fff;
+  box-shadow: inset 0 0 0 2px #0079bf;
+  display: block;
+  margin: 0;
+  transition: margin 85ms ease-in, background 85ms ease-in;
+  width: 100%;
+}
+body .board .columns-wrapper .column.add-column .column-add-controls {
+  margin: 4px 0 0;
+  overflow: hidden;
+  transition: margin 85ms ease-in, height 85ms ease-in;
+}
+body .board .columns-wrapper .column.add-column .column-add-controls input {
+  float: left;
+  margin-top: 0;
+  padding-bottom: 4px;
+  padding-top: 4px;
+  margin-bottom: 0;
+}
+body .board .columns-wrapper .column.add-column .column-add-controls .js-cancel-edit {
+  line-height: 32px;
+  padding: 0 10px;
+  cursor: pointer;
+  float: right;
+}
+body .board .columns-wrapper .column .column-wrapper {
+  background-color: #ebecf0;
+  border-radius: 3px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  max-height: 100%;
+  position: relative;
+  white-space: normal;
+  width: 100% !important;
+}
+body .board .columns-wrapper .column .column-wrapper .column-header {
+  padding: 10px 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+body .board .columns-wrapper .column .column-wrapper .column-header textarea {
+  background: #0000;
+  border-radius: 3px;
+  box-shadow: none;
+  font-weight: 600;
+  height: 28px;
+  margin: -4px 0;
+  max-height: 256px;
+  min-height: 20px;
+  padding: 4px 8px;
+  resize: none;
+  overflow: hidden;
+  overflow-wrap: break-word;
+}
+body .board .columns-wrapper .column .column-wrapper .column-header textarea:focus {
+  background-color: #fff;
+  box-shadow: inset 0 0 0 2px #0079bf;
+}
+body .board .columns-wrapper .column .column-wrapper .column-header .column-header-target {
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+body .board .columns-wrapper .column .column-wrapper .column-header .column-header-target.is-hidden {
+  display: none;
+}
+body .board .columns-wrapper .column .column-wrapper .column-header .delete-column {
+  cursor: pointer;
+  position: absolute;
+  right: 1px;
+  z-index: 1;
+  padding: 10px;
+}
+body .board .columns-wrapper .column .column-wrapper .column-cards {
+  flex: 1 1 auto;
+  margin: 0 4px;
+  min-height: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding: 0 4px;
+  z-index: 1;
+}
+body .board .columns-wrapper .column .column-wrapper .column-cards .column-card {
+  background-color: #fff;
+  border-radius: 3px;
+  box-shadow: 0 1px 0 #091e4240;
+  cursor: pointer;
+  display: block;
+  margin-bottom: 8px;
+  padding: 6px 8px 2px;
+  position: relative;
+  text-decoration: none;
+}
+body .board .columns-wrapper .column .column-wrapper .column-cards .column-card.add-card {
+  background-color: transparent;
+  box-shadow: none;
+  padding: 0;
+}
+body .board .columns-wrapper .column .column-wrapper .column-cards .column-card.add-card.hide {
+  display: none;
+}
+body .board .columns-wrapper .column .column-wrapper .column-cards .column-card.add-card .column-card-add-controls {
+  margin: 4px 0 0;
+  overflow: hidden;
+  transition: margin 85ms ease-in, height 85ms ease-in;
+}
+body .board .columns-wrapper .column .column-wrapper .column-cards .column-card.add-card .column-card-add-controls input {
+  float: left;
+  margin-top: 0;
+  padding-bottom: 4px;
+  padding-top: 4px;
+  margin-bottom: 0;
+}
+body .board .columns-wrapper .column .column-wrapper .column-cards .column-card.add-card .column-card-add-controls .js-cancel-edit {
+  line-height: 32px;
+  padding: 0 10px;
+  cursor: pointer;
+  float: right;
+}
+body .board .columns-wrapper .column .column-wrapper .column-cards .column-card .delete-card {
+  position: absolute;
+  right: 0;
+  bottom: 4px;
+}
+body .board .columns-wrapper .column .column-wrapper .column-add-card {
+  border-radius: 3px;
+  color: #5e6c84;
+  display: block;
+  flex: 1 0 auto;
+  margin: 2px 0 8px 8px;
+  padding: 4px 8px;
+  position: relative;
+  text-decoration: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+   -ms-user-select: none;
+       user-select: none;
+  cursor: pointer;
+}
+body .board .columns-wrapper .column .column-wrapper .column-add-card.hide {
+  display: none;
+}
+
+.footer {
+  background-color: #343a40;
+  width: 100%;
 }
 .footer__copyright {
   color: white;
