--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -17,12 +17,31 @@ body {
     height: 100%;
     margin: 0;
     position: relative;
+    display: flex;
+    flex-direction: column;
+
+    main{
+        width: 100%;
+        flex-grow: 1;
+
+        .export-db {
+            position: absolute;
+            bottom: 90px;
+            right: 20px;
+            border: 3px solid #bfbfbf;
+            border-radius: 50%;
+            line-height: 100px;
+            width: 100px;
+            padding: 20px;
+            text-transform: uppercase;
+            font-weight: 900;
+        }
+    }
 
     p {
         margin-top: 0;
         margin-bottom: 1rem;
     }
-}
 
     .container {
         width: 100%;
@@ -47,6 +66,282 @@ body {
             max-width: 1140px;
         }
     }
+
+    input:not([type=file]), textarea {
+        -webkit-appearance: none;
+        background-color: #fafbfc;
+        border: none;
+        border-radius: 3px;
+        box-shadow: inset 0 0 0 2px #dfe1e6;
+        box-sizing: border-box;
+        display: block;
+        line-height: 20px;
+        margin-bottom: 12px;
+        outline: none;
+        padding: 8px 12px;
+        transition-duration: 85ms;
+        transition-property: background-color,border-color,box-shadow;
+        transition-timing-function: ease;
+    }
+
+    textarea {
+        resize: vertical;
+        width: 100%;
+    }
+
+    .alert {
+        position: relative;
+        padding: 0.75rem 1.25rem;
+        margin-bottom: 1rem;
+        border: 1px solid transparent;
+        border-radius: 0.25rem;
+
+        &.alert-danger {
+            color: #721c24;
+            background-color: #f8d7da;
+            border-color: #f5c6cb;
+        }
+
+        &.alert-success {
+            color: #155724;
+            background-color: #d4edda;
+            border-color: #c3e6cb;
+        }
+    }
+
+    .board {
+        padding-right: 15px;
+        padding-left: 15px;
+        margin-right: auto;
+        margin-left: auto;
+        height: 100%;
+        position: relative;
+
+        .columns-wrapper {
+            bottom: 0;
+            left: 15px;
+            margin-bottom: 8px;
+            overflow-x: auto;
+            overflow-y: hidden;
+            padding-bottom: 8px;
+            position: absolute;
+            right: 15px;
+            top: 30px;
+            -webkit-user-select: none;
+            user-select: none;
+            white-space: nowrap;
+
+            .column {
+                box-sizing: border-box;
+                display: inline-block;
+                height: 100%;
+                margin: 0 4px;
+                vertical-align: top;
+                white-space: nowrap;
+                width: 272px;
+
+                &:first-child {
+                    margin-left: 0px;
+                }
+
+                &.add-column {
+                    background-color: #ebecf0;
+                    border-radius: 3px;
+                    height: auto;
+                    padding: 4px;
+                    transition: background 85ms ease-in,opacity 40ms ease-in,border-color 85ms ease-in;
+
+                    &.is-idle {
+                        cursor: pointer;
+
+                        .placeholder {
+                            display: block;
+                        }
+                    }
+
+                    .placeholder {
+                        color: #fff;
+                        display: none;
+                        padding: 6px 8px;
+                        transition: color 85ms ease-in;
+                    }
+
+                    .column-title-input {
+                        background-color: #fff;
+                        box-shadow: inset 0 0 0 2px #0079bf;
+                        display: block;
+                        margin: 0;
+                        transition: margin 85ms ease-in,background 85ms ease-in;
+                        width: 100%;
+                    }
+
+                    .column-add-controls {
+                        margin: 4px 0 0;
+                        overflow: hidden;
+                        transition: margin 85ms ease-in,height 85ms ease-in;
+
+                        input {
+                            float: left;
+                            margin-top: 0;
+                            padding-bottom: 4px;
+                            padding-top: 4px;
+                            margin-bottom: 0;
+                        }
+
+                        .js-cancel-edit {
+                            line-height: 32px;
+                            padding: 0 10px;
+                            cursor: pointer;
+                            float: right;
+                        }
+                    }
+                }
+
+                .column-wrapper {
+                    background-color: #ebecf0;
+                    border-radius: 3px;
+                    box-sizing: border-box;
+                    display: flex;
+                    flex-direction: column;
+                    max-height: 100%;
+                    position: relative;
+                    white-space: normal;
+                    width: 100%!important;
+
+                    .column-header {
+                        padding: 10px 8px;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        position: relative;
+
+                        textarea {
+                            background: #0000;
+                            border-radius: 3px;
+                            box-shadow: none;
+                            font-weight: 600;
+                            height: 28px;
+                            margin: -4px 0;
+                            max-height: 256px;
+                            min-height: 20px;
+                            padding: 4px 8px;
+                            resize: none;
+                            overflow: hidden;
+                            overflow-wrap: break-word;
+
+                            &:focus {
+                                background-color: #fff;
+                                box-shadow:inset 0 0 0 2px #0079bf;
+                            }
+                        }
+
+                        .column-header-target {
+                            bottom: 0;
+                            cursor: pointer;
+                            left: 0;
+                            position: absolute;
+                            right: 0;
+                            top: 0;
+
+                            &.is-hidden {
+                                display: none;
+                            }
+                        }
+
+                        .delete-column {
+                            cursor: pointer;
+                            position: absolute;
+                            right: 1px;
+                            z-index: 1;
+                            padding: 10px;
+                        }
+                    }
+
+                    .column-cards {
+                        flex: 1 1 auto;
+                        margin: 0 4px;
+                        min-height: 0;
+                        overflow-x: hidden;
+                        overflow-y: auto;
+                        padding: 0 4px;
+                        z-index: 1;
+
+                        .column-card {
+                            background-color: #fff;
+                            border-radius: 3px;
+                            box-shadow: 0 1px 0 #091e4240;
+                            cursor: pointer;
+                            display: block;
+                            margin-bottom: 8px;
+                            padding: 6px 8px 2px;
+                            position: relative;
+                            text-decoration: none;
+
+                            &.add-card {
+                                background-color: transparent;
+                                box-shadow: none;
+                                padding: 0;
+
+                                &.hide {
+                                    display: none;
+                                }
+
+                                .column-card-add-controls {
+                                    margin: 4px 0 0;
+                                    overflow: hidden;
+                                    transition: margin 85ms ease-in,height 85ms ease-in;
+
+                                    input {
+                                        float: left;
+                                        margin-top: 0;
+                                        padding-bottom: 4px;
+                                        padding-top: 4px;
+                                        margin-bottom: 0;
+                                    }
+
+                                    .js-cancel-edit {
+                                        line-height: 32px;
+                                        padding: 0 10px;
+                                        cursor: pointer;
+                                        float: right;
+                                    }
+                                }
+                            }
+
+                            .delete-card {
+                                position: absolute;
+                                right: 0;
+                                bottom: 4px;
+                            }
+                        }
+                    }
+
+                    .column-add-card {
+                        border-radius: 3px;
+                        color: #5e6c84;
+                        display: block;
+                        flex: 1 0 auto;
+                        margin: 2px 0 8px 8px;
+                        padding: 4px 8px;
+                        position: relative;
+                        text-decoration: none;
+                        -webkit-user-select: none;
+                        user-select: none;
+                        cursor: pointer;
+
+                        &.hide {
+                            display: none;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.footer {
+    background-color: #343a40;
+    width: 100%;
 
     &__copyright {
         color: white;
