--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -90,7 +90,8 @@ body {
     }
 
     .alert {
-        position: relative;
+        position: fixed;
+        bottom: 75px;
         padding: 0.75rem 1.25rem;
         margin-bottom: 1rem;
         border: 1px solid transparent;
