--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -161,7 +161,7 @@ body {
                     }
 
                     .placeholder {
-                        color: #fff;
+                        color: #000;
                         display: none;
                         padding: 6px 8px;
                         transition: color 85ms ease-in;
